--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,3 +21,14 @@ jobs:
       - name: build the app
         run: ./scripts/buildprod.sh
 
+      - name: Set up Google Cloud
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: notely-446508
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          export_default_credentials: true
+
+      - name: push image
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-446508/notely-ar-repo/notely:latest
+
+
