--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,11 +22,10 @@ jobs:
         run: ./scripts/buildprod.sh
 
       - name: Set up Google Cloud
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/auth@v2
         with:
           project_id: notely-446508
-          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-          export_default_credentials: true
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: push image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-446508/notely-ar-repo/notely:latest
