--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,10 +8,15 @@ jobs:
   tests:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v4
+        uses: actions/checkout@
+
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -30,7 +35,12 @@ jobs:
       - name: push image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-446508/notely-ar-repo/notely:latest
 
+      - name: run migrations
+        run: ./scripts/migrateup.sh
+
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-446508/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-446508 --max-instances=4
+
+
 
 
