--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@
+        uses: actions/checkout@v4
 
       - name: Install goose
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
